--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+    <div class="mainWidth">
         <head>
             <meta charset="UTF-8">
             <title>Cohort Challenge - PHP</title>
@@ -13,4 +14,5 @@
             <a href="challenge-o.php" class="button">Challenge (MySQLi object oriented)</a>
             <a href="challenge-pdo.php" class="button">Challenge (PDO)</a>                
         </body>
+    </div>
 </html>
