3rd commit - css update

--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!doctype html>
 <html lang="en">
-    <div class="mainWidth">
         <head>
             <meta charset="UTF-8">
             <title>Cohort Challenge - PHP</title>
             <link rel="stylesheet" href="css/style.css" type="text/css" />
         </head>
+    <div class="mainWidth">
         <header>
             <h1>Cohort PHP Challenge - January 12, 2016</h1>
         </header>
-        <body>
-            <a href="challenge.php" class="button">Challenge (MySQLi procedural)</a>
-            <a href="challenge-o.php" class="button">Challenge (MySQLi object oriented)</a>
+        <body
+            <p>Cohort PHP Challenge demonstrates retrieving data from a table called people in a Cloud 9 database called
+            crud. We use SELECT and ECHO to perform and display our data. We use three different forms of PHP to do this:</p>
+            <ol>
+                <li>MySQLi procedural (MySQLi p),</li>
+                <li>MySQLi object oriented (MySQLi oo),</li>
+                <li>Challenge (PDO)</li>
+            </ol>
+            <a href="challenge.php" class="button">Challenge (MySQLi p)</a>
+            <a href="challenge-o.php" class="button">Challenge (MySQLi oo)</a>
             <a href="challenge-pdo.php" class="button">Challenge (PDO)</a>                
         </body>
     </div>
