4th commit - update css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         </head>
     <div class="mainWidth">
         <header>
-            <h1>Cohort PHP Challenge - January 12, 2016</h1>
+            <h1>Cohort PHP Challenge</h1>
+            <h3>January 11, 2016</h3>
         </header>
         <body
             <p>Cohort PHP Challenge demonstrates retrieving data from a table called people in a Cloud 9 database called
